--- a/kubernetes/apps/default/podinfo/ks.yaml
+++ b/kubernetes/apps/default/podinfo/ks.yaml
@@ -2,7 +2,7 @@
 apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
-  name: echo
+  name: podinfo
 spec:
   interval: 1h
   path: ./kubernetes/apps/default/podinfo/app
