--- a/kubernetes/apps/default/podinfo/app/helmrelease.yaml
+++ b/kubernetes/apps/default/podinfo/app/helmrelease.yaml
@@ -5,7 +5,7 @@ metadata:
   name: podinfo
 spec:
   interval: 30m0s
-  # path: ./app
+  path: ./app
   prune: true
   retryInterval: 2m0s
   sourceRef:
