--- a/kubernetes/apps/default/podinfo/ks.yaml
+++ b/kubernetes/apps/default/podinfo/ks.yaml
@@ -3,13 +3,15 @@ apiVersion: kustomize.toolkit.fluxcd.io/v1
 kind: Kustomization
 metadata:
   name: podinfo
+  namespace: flux-system
 spec:
-  interval: 1h
-  path: ./kubernetes/apps/default/podinfo/app
+  interval: 30m0s
+  path: ./kubernetes/apps/default/echo/app
   prune: true
+  retryInterval: 2m0s
   sourceRef:
     kind: GitRepository
-    name: flux-system
-    namespace: flux-system
+    name: podinfo
   targetNamespace: default
-  wait: false
+  timeout: 3m0s
+  wait: true
