add external route for podinfo

--- a/kubernetes/apps/kube-system/podinfo/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/podinfo/app/helmrelease.yaml
@@ -15,3 +15,14 @@ spec:
       requests:
         cpu: 100m
         memory: 64Mi
+    route:
+      app:
+        hostnames: ["{{ .Release.Name }}.${SECRET_DOMAIN}"]
+        parentRefs:
+          - name: envoy-external
+            namespace: network
+            sectionName: https
+        rules:
+          - backendRefs:
+              - identifier: app
+                port: *port
