--- a/kubernetes/apps/kube-system/podinfo/app/helmrelease.yaml
+++ b/kubernetes/apps/kube-system/podinfo/app/helmrelease.yaml
@@ -25,4 +25,4 @@ spec:
         rules:
           - backendRefs:
               - identifier: app
-                port: *port
+                port: 9898
