--- a/kubernetes/apps/kube-system/podinfo/app/ocirepository.yaml
+++ b/kubernetes/apps/kube-system/podinfo/app/ocirepository.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: source.toolkit.fluxcd.io/v1
-kind: GitRepository
+kind: OCIRepository
 metadata:
   name: podinfo
   namespace: flux-system
